# mcp23s17-test-stub

./: .cortex-m7-cross.build  .gdbinit  .gitignore  .ycm_extra_conf.py  Makefile  README.md  meson.build
Inc/: main.h  mcp23s17.h  mcp23s17_stub.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Src/: .main.c.swp  .stm32f7xx_it.c.swp  main.c  mcp23s17.c  meson.build  stm32f7xx_hal_msp.c  stm32f7xx_it.c
scripts/: debug.sh  gdb.sh  openocd.sh
